# todo-cli-rust

./: Cargo.toml  README.md
.github/workflows/: release-windows.yml  release.yml
src/: main.rs  manager.rs  model.rs  storage.rs
